pingpong/manifests/gcloud_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
  #namespace: logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      # volumes:
      #   - name: shared-image
      #     persistentVolumeClaim:
      #       claimName: image-claim
      containers:
      - name: pingpong
        image: rsarpal/k8s_pingpong:latest
        # volumeMounts:
        #   - name: shared-image
        #     mountPath: /tmp/kube
        resources:
          limits:
            memory: "80Mi"
            cpu: "100m"
        ports:
        - containerPort: 5000
---

# LOADBALANCE SERVICE - DOESNT REQUIRE INGRESS
# apiVersion: v1
# kind: Service
# metadata:
#   name: pingpong-svc
#   #namespace: logoutput
# spec:
#   type: LoadBalancer
#   selector:
#     app: pingpong
#   ports:
#   - name: http
#     protocol: TCP
#     port: 80
#     targetPort: 5000

# NODEPORT SERVICE - REQUIRES INGRESS
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  #namespace: logoutput
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
  - name: http
    protocol: TCP
    port: 5563
    targetPort: 5000
